deployment-manifests/trial-task-deployment-green.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: trial-task-api
  name: trial-task-api-green
spec:
  replicas: 1
  selector:
    matchLabels:
      run: trial-task-api
      version: "green"
  template:
    metadata:
      labels:
        run: trial-task-api
        version: "green"
    spec:
      containers:
        - env:
            - name: REDIS_URL
              value: redis://redis:6379
          name: trial-task-api
          image: trial-task-api:green.DEPLOYMENT_VERSION
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
