deployment-manifests/trial-task-service-blue.yml
---
apiVersion: v1
kind: Service
metadata:
  name: trial-task-api
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    run: trial-task-api
    version: "blue"
  type: LoadBalancer
